# oz

./: docker-compose.yml
ozon/: catalog.py
parser/: Dockerfile  parser.py  pyproject.toml  requirements.txt
worker/: Dockerfile  pyproject.toml  requirements.txt  worker.py
