[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["worker"]

[tool.poetry.dependencies]
python = "^3.9"
aiokafka = "^0.7.0"
aiohttp = "^3.7.4"
loguru = "^0.5.3"
asyncclick = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
